tests/fixtures/language/v3/invalid/contracts/contract-with-entity.allium
-- allium: 3

contract BadContract {
    -- Entities are prohibited inside contract bodies; declare at module level.
    entity Sneaky {
        name: String
    }

    serialize: (value: Any) -> ByteArray
}
